select by class and three dropdown add

--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
 </head>
 
 <body>
-    <div>
-        
-        <select id="test">
+    <div>        
+        <select class="test">
+            <option value="1">test1</option>
+            <option value="2">test2</option>
+            <option value="3">test3</option>
+        </select>
+    </div>
+    <div>        
+        <select class="test">
+            <option value="1">test1</option>
+            <option value="2">test2</option>
+            <option value="3">test3</option>
+        </select>
+    </div>
+    <br><br><br><br>
+    <div>        
+        <select class="test">
             <option value="1">test1</option>
             <option value="2">test2</option>
             <option value="3">test3</option>
