--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
 <body>
     <div>        
         <select class="test">
-            <option value="1">test1</option>
-            <option value="2">test2</option>
-            <option value="3">test3</option>
-        </select>
-    </div>
-    <div>        
-        <select class="test">
+            <option >Select</option>
             <option value="1">test1</option>
             <option value="2">test2</option>
             <option value="3">test3</option>
@@ -25,6 +19,16 @@
     <br><br><br><br>
     <div>        
         <select class="test">
+            <option >Select</option>
+            <option value="1">test1</option>
+            <option value="2">test2</option>
+            <option value="3">test3</option>
+        </select>
+    </div>
+    <br><br><br><br>
+    <div>        
+        <select class="test">
+            <option >Select</option>
             <option value="1">test1</option>
             <option value="2">test2</option>
             <option value="3">test3</option>
